feat: Adição da API postNewBin.
